<resources>
    <string name="app_name">TowardsGreen</string>
<<<<<<< HEAD
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="title">Enter post title</string>
    <string name="location">Location</string>
    <string name="problem">Problem</string>
    <string name="add_description">Add description</string>
    <string name="profileStr">Προφίλ χρήστη</string>
    <string name="badgeList">Κατάλογος βραβείων</string>
    <string name="TowardsGreen">TowardsGreen</string>
    <string name="profile_picture">profile picture</string>
    <string name="profile_name">profile name</string>
    <string name="role">Role:</string>
    <string name="qrcode">QRcode</string>
    <string name="create_a_post">Create a post</string>
    <string name="create_your_profile">Create your profile</string>
    <string name="post_title">Title</string>
    <string name="postimage">postImage</string>
    <string name="user_id">User id:</string>
    <string name="points">Points:</string>
    <string name="number_of_badges">Number of badges:</string>
    <string name="more">Περισσότερα</string>
    <string name="post_addMedia">+ Προσθεστε φωτογραφια</string>


    <!--    array with locations-->
    <string-array name="nomoi">
        <item>ΑΘΗΝΑ</item>
         <item>ΕΥΒΟΙΑ</item>
         <item>ΕΥΡΥΤΑΝΙΑ</item>
         <item>ΦΩΚΙΔΑ</item>
         <item>ΦΘΙΩΤΙΔΑ</item>
         <item>ΒΟΙΩΤΙΑ</item>
         <item>ΧΑΛΚΙΔΙΚΗ</item>
         <item>ΗΜΑΘΙΑ</item>
         <item>ΚΙΛΚΙΣ</item>
         <item>ΠΕΛΛΑ</item>
         <item>ΠΙΕΡΙΑ</item>
         <item>ΣΕΡΡΕΣ</item>
         <item>ΘΕΣΣΑΛΟΝΙΚΗ</item>
         <item>ΧΑΝΙΑ</item>
         <item>ΗΡΑΚΛΕΙΟ</item>
         <item>ΛΑΣΙΘΙ</item>
         <item>ΡΕΘΥΜΝΟ</item>
         <item>ΔΡΑΜΑ</item>
         <item>ΕΒΡΟΣ</item>
         <item>ΚΑΒΑΛΑ</item>
         <item>ΡΟΔΟΠΗ</item>
         <item>ΞΑΝΘΗ</item>
         <item>ΑΡΤΑ</item>
         <item>ΙΩΑΝΝΙΝΑ</item>
         <item>ΠΡΕΒΕΖΑ</item>
         <item>ΘΕΣΠΡΩΤΙΑ</item>
         <item>ΚΕΡΚΥΡΑ</item>
         <item>ΚΕΦΑΛΛΟΝΙΑ</item>
         <item>ΛΕΥΚΑΔΑ</item>
         <item>ΖΑΚΥΝΘΟΣ</item>
         <item>ΧΙΟΣ</item>
         <item>ΛΕΣΒΟΣ</item>
         <item>ΣΑΜΟΣ</item>
         <item>ΑΡΚΑΔΙΑ</item>
         <item>ΑΡΓΟΛΙΔΑ</item>
         <item>ΚΟΡΙΝΘΟΣ</item>
         <item>ΛΑΚΩΝΙΑ</item>
         <item>ΜΕΣΣΗΝΙΑ</item>
         <item>ΚΥΚΛΑΔΕΣ</item>
         <item>ΔΩΔΕΚΑΝΗΣΑ</item>
         <item>ΚΑΡΔΙΤΣΑ</item>
         <item>ΛΑΡΙΣΑ</item>
         <item>ΜΑΓΝΗΣΙΑ</item>
         <item>ΤΡΙΚΑΛΑ</item>
         <item>ΑΧΑΪΑ</item>
         <item>ΑΙΤΩΛΟΑΚΑΡΝΑΝΙΑ</item>
         <item>ΗΛΕΙΑ</item>
        <item>ΦΛΩΡΙΝΑ</item>
        <item>ΓΡΕΒΕΝΑ</item>
        <item>ΚΑΣΤΟΡΙΑ</item>
        <item>ΚΟΖΑΝΗ</item>
    </string-array>

=======
    <string name="title_activity_event">EventActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="sidebar_menu_open">Open navigation drawer</string>
    <string name="sidebar_menu_close">Close navigation drawer</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
>>>>>>> 8b69a5f048b510de5c9fcfcfab5b59910acf320e
</resources>