<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_create_post"
    android:orientation="vertical"
    tools:context="activity.CreatePostFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/create_a_post"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/create_post_title_txt"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:hint="@string/title"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:ignore="MissingConstraints" />


            <LinearLayout
                android:id="@+id/spinners"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_post_title_txt"
                tools:ignore="MissingConstraints">

                <Spinner
                    android:id="@+id/create_post_location"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/location"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="188dp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinners">

                <EditText
                    android:id="@+id/create_post_description_txt"
                    android:layout_width="250dp"
                    android:layout_height="200dp"
                    android:background="@drawable/editext_border"
                    android:hint="@string/add_description"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinners"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/post_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/post_media_btn"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button"
                    android:text="@string/post_addMedia"
                    android:textAlignment="center"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/butons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
                tools:ignore="MissingConstraints">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/post_btn_submit"
                    style="?android:attr/buttonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="60dp"
                    android:layout_weight="1.0"
                    android:background="@drawable/button"
                    android:text="@string/submit"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/post_btn_cancel"
                    style="?android:attr/buttonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@drawable/button"
                    android:text="@string/cancel"
                    android:textColor="@color/black" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>